Sun Jun 26 01:00:15 2011  Tadayoshi Funaba  <tadf@dotrb.org>

	* ext/date/date_core.c (date_strftime_internal): removed meaningless braces.
	* ext/date/date_core.c (gengo): the value should be int.

Sat Jun 25 23:45:30 2011  CHIKANAGA Tomoyuki  <nagachika00@gmail.com>

	* vm_insnhelper.c (vm_search_superclass): avoid control frame
	  stack overrun. currently super() in Proc created in a method
	  defined by Module#define_method raise NoMethodError. [Bug #4881]
	* test/ruby/test_method.rb t_super_in_proc_from_define_method):
	  add test for it.

Sat Jun 25 23:23:14 2011  CHIKANAGA Tomoyuki  <nagachika00@gmail.com>

	* thread.c (sleep_forever): now Kernel#sleep don't wakeup by
	  signal handler execution. [Bug #4072]

Sat Jun 25 23:14:47 2011  CHIKANAGA Tomoyuki  <nagachika00@gmail.com>

	* thread.c (rb_threadptr_check_signal): remove unnecessary th->status
	  backup. fix race condition which may results unexpected main thread's
	  status transition. see #4072

Fri Jun 24 19:57:30 2011  Hiroshi Nakamura  <nahi@ruby-lang.org>

	* lib/webrick/httprequest.rb (setup_forwarded_info): Parsing request
	  header failed when the request is from 2 or more Apache reverse
	  proxies. It's said that all X-Forwarded-* headers will contain more
	  than one (comma-separated) value if the original request already
	  contained one of these headers.  Since we could use these values as
	  Host header, we choose the initial(first) value. See #4922.

	* test/webrick/test_httprequest.rb (test_forwarded): Test it.

Fri Jun 24 17:06:33 2011  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* process.c (proc_daemon): should not start timer thread
	  twice.  fixed Bug#4920.

Fri Jun 24 15:54:14 2011  Hiroshi Nakamura  <nahi@ruby-lang.org>

	* ext/openssl/ossl_ssl.c (ossl_ssl_shutdown): Try to shutdown SSL
	  connection more gracefully. Call SSL_shutdown() max 4 times until it
	  returns 1 (success). Bi-directional SSL close has several states but